--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,3 +4,14 @@
 //Fonts
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&family=Source+Sans+Pro:wght@200;300;400&display=swap');
 
+//Variables
+@import "./variables.scss";
+
+//Components
+@import "header.scss";
+@import "navigation.scss";
+@import "./static-promocional-banners.scss";
+@import "./products.scss";
+
+//Config
+@import "./config.scss";
