Adicionando pagina camisetas e pagina de compra de produto

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,6 +12,12 @@
 @import "navigation.scss";
 @import "./static-promocional-banners.scss";
 @import "./products.scss";
+@import "./product-buy.scss";
+@import "./footer.scss";
+@import "./responsive.scss";
+
+//Bootstrap Components
+@import "./breadcrumb.scss";
 
 //Config
 @import "./config.scss";
