--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10467,12 +10467,128 @@ nav.nav-products ul.nav li ul.nav li {
   font-weight: bold;
 }
 
+.products h1 {
+  margin-top: 30px;
+}
+.products .products-container {
+  margin: 30px 0;
+}
+.products .products-container .product-items {
+  color: #343A40;
+}
+.products .products-container .product-items h2 {
+  font-size: 20px;
+  margin: 10px 0 0;
+}
+.products .products-container .product-items .product-stars {
+  font-size: 10px;
+}
+.products .products-container .product-items .product-stars svg {
+  fill: #FFC107;
+}
+.products .products-container .product-items .product-price {
+  font-size: 16px;
+}
+.products .btn {
+  margin-bottom: 30px;
+}
+
+.product-buy figure {
+  margin: 0;
+}
+.product-buy .product-content h1 {
+  margin: 0;
+  font-size: 32px;
+}
+.product-buy .product-content p {
+  font-size: 16px;
+}
+.product-buy .product-price .product-stars svg {
+  fill: #FFC107;
+}
+.product-buy .product-price strong {
+  font-size: 40px;
+}
+.product-buy .product-price form {
+  font-weight: 100;
+}
+.product-buy .product-price form label {
+  margin: 0;
+}
+.product-buy .product-price .product-stars svg, .product-buy .product-price strong span, .product-buy .product-price form {
+  font-size: 16px;
+}
+
+footer {
+  background: #343A40;
+  padding: 25px 0;
+  color: #FFF;
+}
+footer a {
+  color: #FFF;
+}
+footer a:hover {
+  color: #FFF;
+}
+footer h4 {
+  font-size: 20px;
+  color: #FFC107;
+}
+footer ul li.ellipsis {
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+@media (max-width: 375px) {
+  .static-promocional-banners .static-promocional-banners-12x p,
+.static-promocional-banners .static-promocional-banners-all-over-brazil p {
+    font-size: 14px;
+  }
+}
+@media (max-width: 767px) {
+  header form {
+    margin: 20px 0;
+  }
+
+  #promocional-banners {
+    display: none;
+  }
+
+  .products-container img {
+    width: 100%;
+  }
+}
+@media (max-width: 991px) {
+  header ul li {
+    margin: 6px 5px;
+  }
+}
+.breadcrumb {
+  background: initial;
+  margin: 40px 0;
+  padding: 0;
+}
+.breadcrumb a {
+  color: #FF0F9A;
+}
+
 body {
   color: #343A40;
 }
 
 a {
   text-decoration: none !important;
+}
+
+h1 {
+  font-size: 26px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+  margin: 10px 0;
 }
 
 /*# sourceMappingURL=style.css.map */
