--- a/assets/scss/config.scss
+++ b/assets/scss/config.scss
@@ -5,3 +5,12 @@ body {
 a {
     text-decoration: none !important;
 }
+
+h1 {
+    font-size: 26px;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-weight: bold;
+    margin: 10px 0;
+}
